--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vuedraggable": "^2.16.0",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "lodash": "^4.17.10"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
