--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "store": "^2.0.12",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
+    "vue-wechat-title": "^2.0.5",
     "vuedraggable": "^2.16.0",
     "vuex": "^3.0.1"
   },
